# Game_of_life

./: AlwaysNextTurn.cpp  AlwaysNextTurn.h  CMakeLists.txt  CommandSource.h  Donut.cpp  Donut.h  GameControl.cpp  GameControl.h  GameOfLife.cpp  GameOfLife.h  ManualTurns.cpp  ManualTurns.h  Roller.cpp  Roller.h  main.cpp
